--- a/index.html
+++ b/index.html
@@ -1175,7 +1175,7 @@
             עוד על פסיכותרפיה ושאלות חשובות נוספות
           </h1>
           <hr class="border-t border-app-black" />
-          <div class="">
+          <div class="" id="accordion">
             <div
               class="bg-app-gradient text-app-black py-4 border-b border-app-black"
             >
@@ -1198,6 +1198,7 @@
                   ></path>
                 </svg>
               </button>
+              <p class="text-app-black hidden">רחוב אשרמן 11 תל אביב</p>
             </div>
             <div
               class="bg-app-gradient text-app-black py-4 border-b border-app-black"
@@ -1221,6 +1222,7 @@
                   ></path>
                 </svg>
               </button>
+              <p class="text-app-black hidden">רחוב אשרמן 11 תל אביב</p>
             </div>
             <div
               class="bg-app-gradient text-app-black py-4 border-b border-app-black"
@@ -1244,6 +1246,7 @@
                   ></path>
                 </svg>
               </button>
+              <p class="text-app-black hidden">רחוב אשרמן 11 תל אביב</p>
             </div>
             <div
               class="bg-app-gradient text-app-black py-4 border-b border-app-black"
@@ -1267,6 +1270,7 @@
                   ></path>
                 </svg>
               </button>
+              <p class="text-app-black hidden">רחוב אשרמן 11 תל אביב</p>
             </div>
             <div
               class="bg-app-gradient text-app-black py-4 border-b border-app-black"
@@ -1290,6 +1294,7 @@
                   ></path>
                 </svg>
               </button>
+              <p class="text-app-black hidden">רחוב אשרמן 11 תל אביב</p>
             </div>
             <div
               class="bg-app-gradient text-app-black py-4 border-b border-app-black"
@@ -1313,6 +1318,7 @@
                   ></path>
                 </svg>
               </button>
+              <p class="text-app-black hidden">רחוב אשרמן 11 תל אביב</p>
             </div>
           </div>
         </div>
